2010-09-10  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Implement on-demand reporting of empty CSS rules matched for a node by WebCore
        https://bugs.webkit.org/show_bug.cgi?id=45530

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::matchRules):
        (WebCore::CSSStyleSelector::matchRulesForList):
        (WebCore::CSSStyleSelector::matchUARules):
        (WebCore::CSSStyleSelector::styleForElement):
        (WebCore::CSSStyleSelector::pseudoStyleForElement):
        (WebCore::CSSStyleSelector::styleRulesForElement):
        (WebCore::CSSStyleSelector::pseudoStyleRulesForElement):
        * css/CSSStyleSelector.h:
        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::getStyles):
        (WebCore::InspectorDOMAgent::buildArrayForPseudoElements):

2010-09-14  Hyung Song  <beergun@company100.net>

        Reviewed by Darin Adler.

        [BREWMP] Set m_size in SharedBuffer::createWithContentsOfFile();
        https://bugs.webkit.org/show_bug.cgi?id=45701

        SharedBuffer::createWithContentsOfFile() reads file content and saves to 
        result.m_buffer directly, leaving result.m_size unchanged.

        * platform/brew/SharedBufferBrew.cpp:
        (WebCore::SharedBuffer::createWithContentsOfFile):

2010-09-14  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Move adjustLexerState to the HTMLTokenizer
        https://bugs.webkit.org/show_bug.cgi?id=45649

        This function used let us share code between the tree builder and the
        two other users of the HTMLTokenizer.  However, now that the tree
        builder is all grown up, it can't use this code anymore.  The other
        users would much rather this code lived on HTMLTokenizer and understood
        <script>.  This patch attempts to make them happy.

        * html/parser/HTMLPreloadScanner.cpp:
        (WebCore::HTMLPreloadScanner::processToken):