@@ -1,3 +1,15 @@
+2010-09-14  Yury Semikhatsky  <yurys@chromium.org>
+
+        Reviewed by Andreas Kling.
+
+        Move DebuggerScript.js from WebKit/chromium/src/js to WebCore/bindings/v8
+        https://bugs.webkit.org/show_bug.cgi?id=45739
+
+        * WebKit.grd:
+        * WebKit.gypi:
+        * src/js/DebuggerScript.js: Removed.
+        * src/js/DevToolsHostStub.js: Removed.
+
 2010-09-14  Hans Wennborg  <hans@chromium.org>
 
         Reviewed by Jeremy Orlow.
